package consonants.flex.entity;

public class LCInitiation extends Form{
    public LCInitiation(boolean confirmed, boolean filledOut, boolean inProgress) {
        super(confirmed, filledOut, inProgress);
    }
}
