package consonants.flex.entity;

public class PhysicianStatement extends Form{
    public PhysicianStatement(boolean confirmed, boolean filledOut, boolean inProgress) {
        super(confirmed, filledOut, inProgress);
    }
}
